package com.asi2.backendmarket.model;

public enum StoreAction {
	BUY,SELL
}
