package com.asi2.backendmarket.repository;


import org.springframework.data.repository.CrudRepository;

import com.asi2.backendmarket.model.Store;

public interface StoreRepository extends CrudRepository<Store, Integer>{

}
